test/modules/errors/assign-var-from-imported-module.good
assign-var-from-imported-module.chpl:1: In module 'Program':
assign-var-from-imported-module.chpl:4: error: modules (like 'M' here) cannot be mentioned like variables
